second commit -class content added

--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
-body{
-    height:550vh;
+body {
     margin: 0;
     overflow-x: hidden;
-    }
-p{
+}
+p {
     margin: 0;
 }
-.start{
+.page {
     background-color: black;
-    height: 100vh;
+    height: 550vh;
 }
-.start_header{
+.start_header {
     display: flex;
-    height:5vh;
+    height: 5vh;
     width: 100vw;
     background: linear-gradient(260.33deg, #0047FF -13.37%, #00BCD4 109.53%);
     font-family: 'Roboto', sans-serif;
@@ -22,52 +21,55 @@ p{
     align-items: center;
     text-transform: uppercase;
 }
-.navigation{
-    height:10vh;
-    width:100vw;
+.navigation {
+    background-color: black;
+    height: 10vh;
+    width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
 }
-nav{
+nav {
     height: 5vh;
-    width:66.6vw;
+    width: 66.6vw;
 }
-.logo{
-    margin-left:5vw;
+.logo {
+    margin-left: 5vw;
     width: 15vw;
     height: 5vh;
 }
-.links{
+.links {
     height: 5vh;
     width: 35vw;
-    margin-right:7vw;
+    margin-right: 7vw;
     display: flex;
     justify-content: space-between;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 17px;
 }
-a{
+a {
     text-decoration: none;
     color: #848895;
 }
-.start_main{
-    height:65vh;
-    width:100vw;
+.start_main {
+    height: 65vh;
+    width: 100vw;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
 }
-.start_footer{
-    height:20vh;
-    width:100vw;
+.start_footer {
+    height: 20vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.head_text{
+.head_text {
     font-style: normal;
     font-weight: 400;
     font-size: 70px;
@@ -76,7 +78,7 @@ a{
     letter-spacing: 0.68px;
     color: #FFFFFF;
 }
-.text{
+.text {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 21px;
@@ -84,7 +86,7 @@ a{
     text-align: center;
     color: #FFFFFF;
 }
-.left_button{
+.left_button {
     margin-right: 2vw;
     width: 181px;
     height: 52px;
@@ -97,7 +99,7 @@ a{
     text-transform: uppercase;
     color: #FFFFFF;
 }
-.right_button{
+.right_button {
     width: 146px;
     height: 52px;
     background: #000000;
@@ -109,7 +111,7 @@ a{
     text-transform: uppercase;
     color: #FFFFFF;
 }
-.start_footer_text{
+.start_footer_text {
     margin-top: 5vh;
     display: flex;
     justify-content: center;
@@ -127,9 +129,114 @@ a{
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width:80vw;
+    width: 80vw;
     height: 5vh;
 }
+.content {
+    height: 200vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content-box {
+    height: 180vh;
+    width: 70vw;
+}
+.content-top {
+    display: flex;
+    height: 90vh;
+}
+.text-left {
+    width: 35vw;
+    height: 90vh;
+}
+.text-right {
+    width: 35vw;
+    height: 90vh;
+}
+div.page > .content > .content-box > .content-top > .text-left > p {
+    margin-top:5vh;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 46px;
+    letter-spacing: 1px;
+    color: #FFFFFF;
+}
+div.page > .content > .content-box > .content-top > .text-right > p:nth-child(2n+1) {
+    height: 132px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 101px;
+    line-height: 132px;
+    background: linear-gradient(261.81deg, #19FB9B -8.01%, #8C01FA 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+div.page > .content > .content-box > .content-top > .text-right > p:nth-child(2n+2){
+    height: 28px;
+    margin-bottom: 5vh;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 27px;
+    text-transform: uppercase;
+    color: #C4C4C4;
+}
+.content-bottom{
+    display: flex;
+    height:90vh;
+}
+.textbox{
+    height:90vh;
+    width:calc(70vw/3);
+}
+div.page > .content > .content-box > .content-bottom > .textbox:nth-child(1) > p:nth-child(1){
+    margin-top:5vh;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    color: #FFFFFF;
+}
+div.page > .content > .content-box > .content-bottom > .textbox:nth-child(1) > p:nth-child(2) {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #C4C4C4;
+    margin-top: 2vh;
+}
+div.page>.content>.content-box>.content-bottom>.textbox>.text-box>p:nth-child(odd){
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 33px;
+    color: #FFFFFF;
+}
+div.page>.content>.content-box>.content-bottom>.textbox>.text-box>p:nth-child(even){
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 27px;
+    color: #C4C4C4;
+}
+div.page>.content>.content-box>.content-bottom>.textbox:nth-child(2)>.text-box{
+    margin:9vh 10vh 1vh 1vh;
+}
+div.page>.content>.content-box>.content-bottom>.textbox>.text-box>p{
+    margin-bottom:2vh;
+}
+div.page>.content>.content-box>.content-bottom>.textbox:nth-child(3)>.text-box{
+    margin-bottom:10vh;
+}
+.linkbox{
+    color: #19FB9B;
+}
+
+
+
+
 
 
 
