--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /*position: sticky;*/
-    /*top: 0;*/
+    position: sticky;
+    top: 0;
 }
 nav {
     height: 5vh;
